<resources>
    <string name="app_name">Daysone</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="hitung">Hitung</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="total_harga">Total Barang</string>
    <string name="discount">Discount</string>
    <string name="jumlah_bayar">Jumlah Bayar</string>
</resources>