<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8CCED"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selamat_datang"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="DAYSONE APP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kode_barang"
        android:textColor="#37474F"
        tools:text="KODE BARANG" />

    AN

    <EditText
        android:id="@+id/etKodeBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/kode_barang"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/jumlah_barang"
        android:textColor="#37474F"
        tools:text="JUMLAH BARANG" />

    <EditText
        android:id="@+id/etJumlahBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/jumlah_barang"
        android:importantForAutofill="no"
        android:inputType="number"
        android:lines="1"
        android:minHeight="48dp"
        android:textColorHint="#37474F" />

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        tools:text="HITUNG" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama Barang" />

    <TextView
        android:id="@+id/tvNamaBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nama_barang"
        android:textColor="#37474F" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Harga Barang" />

    <TextView
        android:id="@+id/tvHargaBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/harga_barang"
        android:textColor="#37474F" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Barang" />

    <TextView
        android:id="@+id/tvTotalHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total_harga"
        android:textColor="#37474F" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Discount" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/discount"
        android:textColor="#37474F" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jumlah Barang" />

    <TextView
        android:id="@+id/tvJumlahBayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/jumlah_bayar"
        android:textColor="#37474F" />


</LinearLayout>